--- a/views/admin/index.twig
+++ b/views/admin/index.twig
@@ -14,12 +14,20 @@
         <div class="card-body">
           <form class="form" action="/users" method="POST">
               <div class="form-group">
+                  <label for="username">Nom d'utilisateur</label>
+                  <input type="text" class="form-control form-control-lg rounded-0" name="username" id="username">
+              </div>
+              <div class="form-group">
                   <label for="email">Email</label>
                   <input type="text" class="form-control form-control-lg rounded-0" name="email" id="email">
               </div>
               <div class="form-group">
                   <label>Password</label>
                   <input type="password" name="password" class="form-control form-control-lg rounded-0" id="password" >
+              </div>
+              <div class="form-group">
+                  <label>Confirmation de mot de passe</label>
+                  <input type="password_confirm" name="password_confirm" class="form-control form-control-lg rounded-0" id="password_confirm" >
               </div>
               <input type="submit" class="btn btn-secondary btn-lg float-right" id="btnLogin" value="Identification">
           </form>
