--- a/views/admin/layout.twig
+++ b/views/admin/layout.twig
@@ -7,4 +7,6 @@
   <body>
     {% block body %}{% endblock %}
   </body>
+    <script type="text/javascript" src="/javascripts/login.js"></script>
+    <script type="text/javascript" src="/javascripts/admin.js"></script>
 </html>
