add/show flipbooks

--- a/views/admin/index.twig
+++ b/views/admin/index.twig
@@ -64,6 +64,7 @@
           </div>
           </div>
         </div>
-      {# </div>
-    </div> #}
+{% endblock %}
+{% block scripts %}
+  <script type="text/javascript" src="/javascripts/login.js"></script>
 {% endblock %}
