--- a/views/admin/dashboard.twig
+++ b/views/admin/dashboard.twig
@@ -8,21 +8,52 @@
 {# <a href="#" class="float-right" id="btnNewFlipbook" data-modal-action="addflipbook">+ Nouveau FlipBook</button> #}
 
 
-<form>
+<form enctype="multipart/form-data" method="post" id="addflipbook" action="/admin">
   <div class="form-group">
     <label for="title">Titre du flipBook</label>
-    <input type="text" class="form-control" id="title" name="title" placeholder="Titre">
+    <input type="text" class="form-control" id="title" name="title" placeholder="Titre"/>
   </div>
   <div class="form-group">
     <label for="description">Description du flipBook</label>
-    <textarea class="form-control" id="description" name="description" rows="3">Description...</textarea>
+    <textarea class="form-control" id="description" name="description" rows="3"></textarea>
   </div>
   <div class="custom-file">
-    <input type="file" name="file" class="custom-file-input" id="file">
+    <input type="file" name="file" class="file-path validate" id="file"/>
     <label class="custom-file-label" for="file">Choose file</label>
   </div>
-  <input type="submit" class="btn btn-secondary float-right" id="addflipbook" value="Ajouter">
-
-
+  <input type="submit" class="btn btn-secondary float-right" value="Ajouter">
 </form>
+
+<div class="container">
+  <div class="row">
+  {% for book in books %}
+  {{ book._id }}
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="{{ book.cover | default('/images/defaultBook.jpg') }}"/>
+      <div class="card-body">
+        <h5 class="card-title">{{ book.title }}</h5>
+        <p class="card-text">{{ book.nbViews | default('0') }} Vues</p>
+      </div>
+      <div class="card-footer">
+        <a href="{{ '/' ~ book.file }}" id="deleteFlipbook" class="card-link">
+          <svg class="bi bi-trash-fill float-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M2.5 1a1 1 0 00-1 1v1a1 1 0 001 1H3v9a2 2 0 002 2h6a2 2 0 002-2V4h.5a1 1 0 001-1V2a1 1 0 00-1-1H10a1 1 0 00-1-1H7a1 1 0 00-1 1H2.5zm3 4a.5.5 0 01.5.5v7a.5.5 0 01-1 0v-7a.5.5 0 01.5-.5zM8 5a.5.5 0 01.5.5v7a.5.5 0 01-1 0v-7A.5.5 0 018 5zm3 .5a.5.5 0 00-1 0v7a.5.5 0 001 0v-7z" clip-rule="evenodd"/>
+          </svg>
+        </a>
+        <a href="#" id="updateFlipbook" class="card-link">
+          <svg class="bi bi-brush float-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M15.213 1.018a.572.572 0 01.756.05.57.57 0 01.057.746C15.085 3.082 12.044 7.107 9.6 9.55c-.71.71-1.42 1.243-1.952 1.596-.508.339-1.167.234-1.599-.197-.416-.416-.53-1.047-.212-1.543.346-.542.887-1.273 1.642-1.977 2.521-2.35 6.476-5.44 7.734-6.411z"/>
+            <path d="M7 12a2 2 0 01-2 2c-1 0-2 0-3.5-.5s.5-1 1-1.5 1.395-2 2.5-2a2 2 0 012 2z"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+  {% endfor %}
+  </div>
+</div>
+
+{% endblock %}
+{% block scripts %}
+  <script type="text/javascript" src="/javascripts/login.js"></script>
+  <script type="text/javascript" src="/javascripts/admin.js"></script>
 {% endblock %}
