--- a/views/admin/dashboard.twig
+++ b/views/admin/dashboard.twig
@@ -1,6 +1,8 @@
 {% extends 'admin/layout.twig' %}
 
 {% block body %}
+
+
   <h1>Dashborad</h1>
   <p>Liste des flipbooks</p>
 
@@ -27,7 +29,6 @@
 <div class="container">
   <div class="row">
   {% for book in books %}
-  {{ book._id }}
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="{{ book.cover | default('/images/defaultBook.jpg') }}"/>
       <div class="card-body">
@@ -35,25 +36,69 @@
         <p class="card-text">{{ book.nbViews | default('0') }} Vues</p>
       </div>
       <div class="card-footer">
-        <a href="{{ '/' ~ book.file }}" id="deleteFlipbook" class="card-link">
+        <button data-attribute="{{ book._id }}" id="{{book._id}}" class="card-link deleteFlipbook">
           <svg class="bi bi-trash-fill float-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M2.5 1a1 1 0 00-1 1v1a1 1 0 001 1H3v9a2 2 0 002 2h6a2 2 0 002-2V4h.5a1 1 0 001-1V2a1 1 0 00-1-1H10a1 1 0 00-1-1H7a1 1 0 00-1 1H2.5zm3 4a.5.5 0 01.5.5v7a.5.5 0 01-1 0v-7a.5.5 0 01.5-.5zM8 5a.5.5 0 01.5.5v7a.5.5 0 01-1 0v-7A.5.5 0 018 5zm3 .5a.5.5 0 00-1 0v7a.5.5 0 001 0v-7z" clip-rule="evenodd"/>
           </svg>
-        </a>
-        <a href="#" id="updateFlipbook" class="card-link">
+        </button>
+        <button id="{{book._id}}" class="card-link btn btn-primary updateFlipbook" data-toggle="modal" data-target="#updateModal">
           <svg class="bi bi-brush float-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path d="M15.213 1.018a.572.572 0 01.756.05.57.57 0 01.057.746C15.085 3.082 12.044 7.107 9.6 9.55c-.71.71-1.42 1.243-1.952 1.596-.508.339-1.167.234-1.599-.197-.416-.416-.53-1.047-.212-1.543.346-.542.887-1.273 1.642-1.977 2.521-2.35 6.476-5.44 7.734-6.411z"/>
             <path d="M7 12a2 2 0 01-2 2c-1 0-2 0-3.5-.5s.5-1 1-1.5 1.395-2 2.5-2a2 2 0 012 2z"/>
           </svg>
-        </a>
+        </button>
       </div>
     </div>
   {% endfor %}
   </div>
 </div>
 
+
+{# update Modal #}
+<!-- Button trigger modal -->
+{# <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal">
+  Launch demo modal
+</button> #}
+
+<!-- Modal -->
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <form class="" id="editflipbook" action="/admin" method="post">
+        <div class="modal-header">
+          <h5 class="modal-title" id="updateModalLabel">Modifier un flipBook</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <input type="hidden" class="form-control" id="updatedTitleID" name="id"/>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="title">Titre du flipBook</label>
+            <input type="text" class="form-control" id="updatedTitle" name="title"/>
+          </div>
+          <div class="form-group">
+            <label for="description">Description du flipBook</label>
+            <textarea class="form-control" id="updatedDescription" name="description" rows="3"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+          {# <button type="button" class="btn btn-primary">Sauvegarder</button> #}
+          <input type="submit" class="btn btn-primary" value="Sauvegarder">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
 {% endblock %}
 {% block scripts %}
   <script type="text/javascript" src="/javascripts/login.js"></script>
   <script type="text/javascript" src="/javascripts/admin.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 {% endblock %}
